tests/ui/nll/mir_check_cast_unsafe_fn.stderr
error: lifetime may not live long enough
  --> $DIR/mir_check_cast_unsafe_fn.rs:7:14
   |
LL | fn bar<'a>(input: &'a u32, f: fn(&'a u32) -> &'a u32) -> &'static u32 {
   |        -- lifetime `'a` defined here
...
LL |     unsafe { g(input) }
   |              ^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

